Fix message word lines/wrapping

--- a/app/sass/_message.scss
+++ b/app/sass/_message.scss
@@ -1,6 +1,6 @@
 .message-view {
   width: 100%;
-  max-width: 650px;
+  max-width: 700px;
   margin: auto;
   box-sizing: border-box;
   border: 1px solid black;
@@ -73,8 +73,8 @@
       font-size: 14px;
       position: relative;
       z-index: 2;
-      max-width: 130px;
-      width: 130px;
+      max-width: 90px;
+      width: 90px;
       box-sizing: border-box;
     }
 
@@ -88,6 +88,8 @@
         word-break: break-all;
         word-wrap: break-word;
         margin-top: 0px;
+        white-space: pre-line;
+        font-size: 14px;
       }
 
       .bottom-row {
